--- a/index.css
+++ b/index.css
@@ -7,9 +7,9 @@
 }
 
 #title {
-  color: rgb(135, 136, 136);
+  color: rgb(110, 110, 110);
   font-family: Arial, sans-serif;
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(250, 250, 250);
 }
 
 #navmenu {
@@ -42,20 +42,22 @@ a {
   position: absolute;
   visibility: hidden;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center; 
 }
 
 #reactplusjs {
   display: flex;
   flex-direction: column;
-  align-items: center
+  align-items: center;
+  margin-right: 50px;
 }
 
 #wppluselem {
   display: flex;
   flex-direction: column;
-  align-items:center
+  align-items:center;
+  margin-left: 50px;
 
 }
 
@@ -85,4 +87,10 @@ a {
   margin-top: 300px;
   color: gray;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+@media (max-width: 900px) {
+  #workspopup {
+    width: 400px
+  }
 }
