--- a/index.css
+++ b/index.css
@@ -128,9 +128,16 @@ a {
   width: 100%
 }
 
-@media (max-width: 900px) {
+
+@media (max-width: 600px) {
   #workspopup {
-    width: 400px
+    width: 350px;
+    height: 500px
   }
-  
+  #bio-title {
+    font-size: 70px;
+  }
+  #bio {
+    font-size: 15px
+  }
 }
