--- a/works2.css
+++ b/works2.css
@@ -9,27 +9,24 @@ justify-content: center;
 h1 {
   color: rgb(0, 0, 0);
   font-family: Arial, sans-serif;
-  font-size: 100px;
+  font-size: 90px;
   text-align: center;
 
 }
 
-#reactcalculatorimg {
-  width: 300px;
+#ronezoneimg {
+  width: 600px;
   filter: saturate(0%);
 }
 
 
 
-#reactdrummachineimg {
-  width: 350px;
+#playhouseimg {
+  width: 600px;
   filter: saturate(0%);
 }
 
-#reactpomodoroclockimg {
-  width: 350px;
-  filter: saturate(0%);
-}
+
 
 #imagelinks {
   display: flex;
@@ -38,5 +35,5 @@ h1 {
 }
 
 .images:hover {
-   
+
 }
