--- a/works1.css
+++ b/works1.css
@@ -37,6 +37,28 @@ h1 {
   
 }
 
+#homereactjs {
+  text-align: center;
+  color:rgb(138, 24, 24);
+  text-decoration: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 30px;
+  font-weight: 600;
+  margin-top: 10px
+  
+}
+
+#towpelem {
+  text-align: center;
+  color:rgb(138, 24, 24);
+  text-decoration: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
 .images:hover {
    
 }
