--- a/works1.css
+++ b/works1.css
@@ -2,7 +2,7 @@
   background-color: rgb(245, 245, 245);
   display: flex;
   flex-direction: column;
-justify-content: center;
+  justify-content: center;
   min-height: 100vh
 }
 
@@ -16,24 +16,28 @@ h1 {
 
 #reactcalculatorimg {
   width: 300px;
-  filter: saturate(0%);
+  filter: saturate(70%)
+ 
 }
 
 
 
 #reactdrummachineimg {
   width: 350px;
-  filter: saturate(0%);
+  filter: saturate(70%)
+  
 }
 
 #reactpomodoroclockimg {
   width: 350px;
-  filter: saturate(0%);
+  filter: saturate(70%)
+  
 }
 
 #imagelinks {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   
 }
 
@@ -59,6 +63,30 @@ h1 {
   margin-bottom: 20px;
 }
 
-.images:hover {
-   
+@media (max-width: 1000px) {
+  #imagelinks {
+    flex-direction: column;
+    align-items:center; 
+  }
+  #reactcalculatorimg {
+    width: 300px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  
+  #reactdrummachineimg {
+    width: 350px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  
+  #reactpomodoroclockimg {
+    width: 350px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  h1{
+    font-size: 70px;
+  }
 }
