--- a/works2.css
+++ b/works2.css
@@ -16,14 +16,14 @@ h1 {
 
 #ronezoneimg {
   width: 600px;
-  filter: saturate(0%);
+  
 }
 
 
 
 #playhouseimg {
   width: 600px;
-  filter: saturate(0%);
+  
 }
 
 
@@ -55,6 +55,26 @@ h1 {
   margin-top: 10px;
 }
 
-.images:hover {
+@media (max-width: 1000px) {
+  #imagelinks {
+    flex-direction: column;
+    align-items:center; 
+  }
+  #ronezoneimg {
+    width: 400px;
+    filter: saturate(100%);
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+    
+  #playhouseimg {
+    width: 400px;
+    filter: saturate(100%);
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 
+  h1 {
+    font-size: 60px
+  }
 }
