--- a/index.css
+++ b/index.css
@@ -162,9 +162,9 @@ text-align: center;
   }
 
 
-@media (max-width: 700px) {
+@media (max-width: 1000px) {
   #workspopup {
-    width: 400px;
+    width: 350px;
     height: 500px
   }
 
@@ -175,13 +175,14 @@ text-align: center;
   #bio-title {
     font-size: 70px;
     text-align: left;
+  position: absolute;
   }
   #bio {
     font-size: 15px
   }
   #formcontainer {
      
-      width: 400px;
+      width: 350px;
       height: 400px
     }
   }
