changed color of works title to make it clear if changes applied

--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ a {
 #workstitle {
   text-align: center;
   font-size: 30px;
-  color: white;
+  color: rgb(59, 91, 233);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
