--- a/index.css
+++ b/index.css
@@ -195,12 +195,11 @@ text-align: center;
   #bio-title {
     font-size: 30px;
     text-align: left;
-    display: flex;
-    justify-content:left
+    margin-right: 210px;
   }
   #bio {
     font-size: 15px;
-    margin-top: 100px
+    margin-top: 250px
     
   }
   #aboutme {
