--- a/works1.css
+++ b/works1.css
@@ -3,7 +3,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 100vh
+  min-height: 100vh;
+  position: relative;
+  overflow: hidden;
+  
 }
 
 h1 {
@@ -15,7 +18,8 @@ h1 {
 }
 
 #reactcalculatorimg {
-  width: 300px;
+  width: 350px;
+  height: 370px;
   filter: saturate(70%)
  
 }
@@ -24,14 +28,22 @@ h1 {
 
 #reactdrummachineimg {
   width: 350px;
+  height: 310px;
   filter: saturate(70%)
   
 }
 
 #reactpomodoroclockimg {
   width: 350px;
+  height: 310px;
   filter: saturate(70%)
   
+}
+
+#barchartimg {
+  width: 350px;
+  height: 310px;
+  filter: saturate(70%)
 }
 
 #imagelinks {
@@ -63,6 +75,15 @@ h1 {
   margin-bottom: 100px;
 }
 
+#leftarrow {
+  position: absolute
+}
+
+#rightarrow {
+  position: absolute;
+  right: 0
+}
+
 @media (max-width: 1000px) {
   #imagelinks {
     flex-direction: column;
@@ -89,4 +110,5 @@ h1 {
   h1{
     font-size: 55px;
   }
+
 }
