--- a/works1.css
+++ b/works1.css
@@ -15,6 +15,8 @@ h1 {
   font-family: Arial, sans-serif;
   font-size: 100px;
   text-align: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
 
 }
 
@@ -26,8 +28,6 @@ h1 {
   margin-right: 40px
  
 }
-
-
 
 #reactdrummachineimg {
   width: 350px;
@@ -69,7 +69,7 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 30px;
   font-weight: 600;
-  margin-top: 10px
+  margin-top: 30px
   
 }
 
@@ -80,8 +80,8 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
   font-weight: 600;
-  margin-top: 10px;
-  margin-bottom: 100px;
+  margin-top: 20px;
+  margin-bottom: 80px;
 }
 
 #leftarrow {
@@ -96,7 +96,7 @@ h1 {
 @media (max-width: 1000px) {
   #imagelinks {
    
-      padding-left: 20px;
+      padding-left: 0px;
 
     }
   
@@ -118,6 +118,19 @@ h1 {
 
   h1{
     font-size: 55px;
+    margin-bottom: 10px;
+    margin-top: 0px
+  }
+
+  #homereactjs {
+  
+    margin-top: 5px
+    
+  }
+  
+  #towpelem {
+    margin-top: 20px;
+    margin-bottom: 60px;
   }
 
 }
