--- a/works2.css
+++ b/works2.css
@@ -41,7 +41,7 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 30px;
   font-weight: 600;
-  margin-top: 20px;
+  margin-top: 30px;
   
 }
 
@@ -52,8 +52,8 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
   font-weight: 600;
-  margin-top: 10px;
-  margin-bottom: 100px
+  margin-top: 20px;
+  margin-bottom: 80px
 }
 
 @media (max-width: 1000px) {
@@ -78,4 +78,14 @@ h1 {
   h1 {
     font-size: 50px
   }
+
+  #homewpelem {
+    margin-top: 5px;
+  }
+
+  #toreactjs {
+    margin-top: 20px;
+    margin-bottom: 60px
+  }
+
 }
