--- a/works2.css
+++ b/works2.css
@@ -1,5 +1,5 @@
 #container {
-  background-color: rgb(245, 245, 245);
+  background: linear-gradient(160deg, rgb(161, 162, 185) 0% 5%, rgb(233, 233, 233) 20% 50%, rgb(186, 188, 204) 60% 65%, rgb(238, 238, 238) 95% 100%);
   display: flex;
   flex-direction: column;
 justify-content: center;
@@ -16,6 +16,7 @@ h1 {
 
 #ronezoneimg {
   width: 550px;
+  border-radius: 7px;
   
 }
 
@@ -23,6 +24,7 @@ h1 {
 
 #playhouseimg {
   width: 550px;
+  border-radius: 7px;
   
 }
 
