mobile view functional

--- a/works1.css
+++ b/works1.css
@@ -18,8 +18,8 @@
 }
 
 h1 {
-  color: rgb(0, 0, 0);
-  font-family: Arial, sans-serif;
+  color: rgb(65, 7, 99);
+  font-family:Tahoma, Geneva, Verdana, sans-serif;
   font-size: 100px;
   text-align: center;
   margin-top: 20px;
